# chat-cli

./: AGENTS.md  Cargo.toml  README.md  test.jsonl
.github/workflows/: ci.yml
src/: chat_backend.rs  cli.rs  lib.rs  main.rs  ollama_backend.rs  transcript.rs
tasks/: generate-tasks-codex.md  prd-local-chat-cli.md  process-task-list-codex.md  tasks-prd-local-chat-cli.md
tests/: message_format_tests.rs  transcript_tests.rs
